--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,6 @@ body {
   background-color: #d6e6f2;
   margin: 0 10% 0 10%;
   min-height: 100%;
-  max-width: 100%;
   overflow-x: hidden;
 }
 
@@ -24,7 +23,7 @@ body {
 
 h1 {
   padding: 5% 5% 5% 5%;
-  font-size: 5rem;
+  font-size: 4rem;
   z-index: 1;
 }
 
@@ -50,7 +49,8 @@ hr {
   height: 25rem;
   display: flex;
   flex-direction: row;
-  justify-items: space-evenly;
+  justify-items: center;
+  width: 100%;
 }
 
 .hello-h1 {
